Add register page and configure login page

--- a/client/src/app/login-page/login-page.component.html
+++ b/client/src/app/login-page/login-page.component.html
@@ -1,4 +1,3 @@
-
 <link rel="stylesheet" href="/client/src/app/login-page/login-page.component.css">
 
 <div class="login-container">
@@ -19,4 +18,9 @@
       class="login-input">
     <button type="submit" class="login-button">Log In</button>
   </form>
+  <p>Don't have an account?</p>
+  <a routerLink="/register">Join us now!</a>
 </div>
+
+
+
