Fix redirect to login page after logout

--- a/client/src/app/main-page/main-page.component.html
+++ b/client/src/app/main-page/main-page.component.html
@@ -5,11 +5,8 @@
     </p>
   </div>
 
-  <ng-template #showLogin>
-    <button class="login-button" (click)="redirectToLogin()">Log In</button>
-  </ng-template>
 
-  <div class="extra-info" *ngIf="currentUser; else showLogin">
+  <div class="extra-info">
     <span>Other Info</span>
     <button class="logout-button" (click)="logout()">Log Out</button>
   </div>
