Implement message sending with SignalR

--- a/client/src/app/main-page/main-page.component.html
+++ b/client/src/app/main-page/main-page.component.html
@@ -13,4 +13,7 @@
     <span>Other Info</span>
     <button class="logout-button" (click)="logout()">Log Out</button>
   </div>
+
 </div>
+
+<app-chat> </app-chat>
