--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -1,20 +1,18 @@
 <div class="chat-container">
   <!-- Sidebar with chat list -->
   <div class="chat-list">
-    <h3>Chats</h3>
-    <ul>
-      <li *ngFor="let chat of chats" (click)="switchChat(chat)">{{ chat }}</li>
-    </ul>
+    <div *ngFor="let user of users" class="user-card">
+      {{user.username}}
+    </div>
   </div>
 
   <!-- Main chat area -->
   <div class="chat-area">
     <div class="message-list">
       <div *ngFor="let message of messages">
-        <strong>{{ message.userName }}:</strong> {{ message.content }} <br />
+        <strong>{{ message.userName }}: {{message.content}}</strong> <br />
       </div>
     </div>
-
     <!-- Input bar -->
     <div class="message-input">
       <input [(ngModel)]="newMessage" placeholder="Type your message..." />
