--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -1,26 +1,40 @@
 <div class="chat-container">
-  <!-- Sidebar with chat list -->
-
+  <!-- Sidebar with user list -->
   <div class="chat-list">
-    <div *ngFor="let user of users" class="user-card" (click)="showChat(user.username)">
-      {{user.username}}
+    <h3>Users</h3>
+    <div *ngFor="let user of users" class="user-card" (click)="openChat(user.username)">
+      {{ user.username }}
     </div>
   </div>
 
   <!-- Main chat area -->
   <div class="chat-area">
-    <div class="chat-name" [(ngModel)]="chatId" ngDefaultControl>
-      <p>{{chatId}}</p>
+    <!-- Centered message when no recipient is selected -->
+    <div *ngIf="!recipientUser" class="center-message">
+      <p>Select a user to start chatting</p>
     </div>
-    <div class="message-list">
-      <div *ngFor="let message of messages">
-        <strong>{{ message.senderUsername }}: {{message.content}}</strong> <br />
+
+    <!-- Chat content when a recipient is selected -->
+    <ng-container *ngIf="recipientUser">
+      <div class="chat-header">
+        <h3>Chat with {{ recipientUser }}</h3>
       </div>
-    </div>
-    <!-- Input bar -->
-    <div class="message-input">
-      <input ngDefaultControl [(ngModel)]="newMessage" placeholder="Type your message..."/>
-      <button (click)="sendMessage()">Send</button>
-    </div>
+
+      <div class="message-list">
+        <div *ngFor="let message of messages" class="message">
+          <strong>{{ message.senderUsername }}:</strong> {{ message.content }}
+        </div>
+      </div>
+
+      <!-- Input area -->
+      <div class="message-input">
+        <input
+          [(ngModel)]="newMessage"
+          placeholder="Type your message..."
+          class="input-field"
+        />
+        <button (click)="sendMessage()" [disabled]="!newMessage.trim()">Send</button>
+      </div>
+    </ng-container>
   </div>
 </div>
