--- a/client/src/app/chat/chat.component.css
+++ b/client/src/app/chat/chat.component.css
@@ -1,7 +1,7 @@
 /* Container for the entire chat */
 .chat-container {
   display: flex;
-  height: 93vh;
+  height: 100vh;
 }
 
 /* Sidebar for chat list */
@@ -10,14 +10,14 @@
   max-width: 400px;
   min-width: 200px;
   background-color: #1f1f1f;
-  padding: 20px;
+  padding: 10px 20px 20px 20px;
   resize: horizontal;
   overflow-y: auto;
 }
 
 .chat-list h3 {
   color: white;
-  font-family: Arial;
+
 }
 
 /* Main chat area */
@@ -25,63 +25,74 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 20px;
   box-sizing: border-box;
-  background-color: #2b2b2b;
+  background-color: black;
 }
 
 /* Centered message when no user is selected */
-.center-message {
-  font-size: 1.2em;
-  color: #666;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
+.chat-area .center-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  color: #666666;
 }
 
 /* Messages container */
 .message-list {
   flex-grow: 1;
   overflow-y: auto;
-  margin-bottom: 10px;
   color: white;
 }
 
+.message-list::-webkit-scrollbar-track
+{
+  background-color: #131313;
+}
+
+.message-list::-webkit-scrollbar
+{
+  width: 10px;
+  background-color: #131313;
+}
+
+.message-list::-webkit-scrollbar-thumb
+{
+  background-color: #1f1f1f;
+  border-radius: 10px;
+}
+
+
+
 /* Chat header */
-.chat-header h3 {
+.chat-header {
+  background-color: #0e0e0e;
   color: white;
-  font-family: Arial, sans-serif;
-  margin-bottom: 10px;
+  width: auto;
+  padding: 0 0 0 20px;
+
 }
 
 /* Message input */
 .message-input {
   display: flex;
-  padding: 10px 0;
+  height: 50px;
+  font-size: 40px;
 }
 
 .message-input input {
+  background-color: #1f1f1f;
   flex-grow: 1;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-}
-
-.message-input button {
-  margin-left: 10px;
-  padding: 10px 20px;
-  background-color: #007bff;
+  padding: 0 0 0 15px;
   color: white;
   border: none;
-  border-radius: 4px;
-  cursor: pointer;
+  font-size: 14px;
 }
 
-.message-input button:hover {
-  background-color: #0056b3;
+.message-input input:focus {
+  outline: none;
+  box-shadow: none;
+  border: none;
 }
 
 /* User card in the chat list */
@@ -102,3 +113,59 @@
 .user-card:hover {
   background-color: #0056b3;
 }
+
+.message-list {
+  flex: 1;
+  padding: 10px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.message {
+  font-size: 14px;
+  font-family: "Nunito", sans-serif;
+  max-width: 60%;
+  padding: 8px;
+  border-radius: 11px;
+  margin: 1px 0;
+  display: inline-block;
+}
+
+.my-message {
+  background-color: #065c91;
+  text-align: right;
+  align-self: flex-end; /* This pushes the message to the right */
+}
+
+.other-message {
+  background-color: #333333;
+  text-align: left;
+  align-self: flex-start; /* This keeps the message on the left */
+}
+
+.timestamp {
+  font-size: 0.8em;
+  margin-left: 3px;
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  top: 3px;
+}
+
+.my-message .timestamp {
+  color: #c5c6c7;
+}
+
+.other-message .timestamp {
+  color: #8d8f91;
+
+}
+.i-wanna-be-your-dog {
+  display: flex;
+  margin-top: 10px;
+  width: 100%;
+  height: 1px;
+  background-color: #666;
+}
+
