--- a/client/src/app/searchbar/searchbar.component.css
+++ b/client/src/app/searchbar/searchbar.component.css
@@ -4,21 +4,8 @@
   height: 30px;
   align-items: center;
   display: flex;
-  background-color: #ffffff;
+  background-color: #3e3e3e;
   border-radius: 20px;
-}
-
-.search-button {
-  margin-left: 10px;
-  height: 30px;
-  width: 40px;
-  background-color: #6666cc;
-  color: #ffffff;
-  border: none;
-  cursor: pointer;
-  align-content: center;
-  margin-right: 0;
-  border-radius: 0 20px 20px 0;
 }
 
 .button-image{
@@ -28,8 +15,11 @@
 
 .input-bar {
   border: none;
-  width: 500px;
-  margin-left: 10px
+  width: 90%;
+  margin-left: 10px;
+  background-color: #3e3e3e;
+  color: white;
+  font-size: 12px;
 }
 
 .input-bar:focus {
