--- a/client/src/app/searchbar/searchbar.component.html
+++ b/client/src/app/searchbar/searchbar.component.html
@@ -1,6 +1,3 @@
 <div class="searchbar">
-  <input type="text" class="input-bar" (input)="onSearch($event)" placeholder="Find user" [(ngModel)]="searchProperty" ngDefaultControl/>
-  <button class="search-button" (click)="searchUser()">
-    <img src="../assets/icons/search-icon.png" class="button-image" alt="search-icon"/>
-  </button>
+  <input type="text" class="input-bar" (input)="onSearch($event)" placeholder="Find user" [(ngModel)]="searchProperty" ngDefaultControl>
 </div>
