Add autoscrolling down on new message

--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -21,7 +21,7 @@
         <h3>{{ recipientUser }}</h3>
       </div>
 
-      <div class="message-list">
+      <div class="message-list" #messageList>
         <div
           *ngFor="let message of messages"
           class="message"
