--- a/client/src/app/chat/chat.component.css
+++ b/client/src/app/chat/chat.component.css
@@ -1,16 +1,13 @@
-/* Container for the entire chat */
 .chat-container {
   display: flex;
   height: 100vh;
 }
 
-/* Sidebar for chat list */
 .chat-list {
   width: 300px;
   max-width: 400px;
   min-width: 200px;
   background-color: #1f1f1f;
-  padding: 10px 20px 20px 20px;
   resize: horizontal;
   overflow-y: auto;
 }
@@ -20,7 +17,6 @@
 
 }
 
-/* Main chat area */
 .chat-area {
   display: flex;
   flex-direction: column;
@@ -29,7 +25,6 @@
   background-color: black;
 }
 
-/* Centered message when no user is selected */
 .chat-area .center-message {
   display: flex;
   justify-content: center;
@@ -38,7 +33,6 @@
   color: #666666;
 }
 
-/* Messages container */
 .message-list {
   flex-grow: 1;
   overflow-y: auto;
@@ -62,9 +56,6 @@
   border-radius: 10px;
 }
 
-
-
-/* Chat header */
 .chat-header {
   background-color: #0e0e0e;
   color: white;
@@ -73,7 +64,6 @@
 
 }
 
-/* Message input */
 .message-input {
   display: flex;
   height: 50px;
@@ -95,7 +85,6 @@
   border: none;
 }
 
-/* User card in the chat list */
 .user-card {
   background-color: #007bff;
   color: white;
@@ -135,13 +124,13 @@
 .my-message {
   background-color: #065c91;
   text-align: right;
-  align-self: flex-end; /* This pushes the message to the right */
+  align-self: flex-end;
 }
 
 .other-message {
   background-color: #333333;
   text-align: left;
-  align-self: flex-start; /* This keeps the message on the left */
+  align-self: flex-start;
 }
 
 .timestamp {
@@ -161,11 +150,30 @@
   color: #8d8f91;
 
 }
-.i-wanna-be-your-dog {
-  display: flex;
-  margin-top: 10px;
+
+.chat-card {
+  background-color: #3e3e3e;
+  color: white;
   width: 100%;
-  height: 1px;
-  background-color: #666;
+  height: 45px;
+  display: flex;
+  margin-top: 5px;
+  justify-content: flex-start;
+  align-items: center;
+  cursor: pointer;
 }
 
+.chat-card-content {
+  text-align: left;
+  padding-left: 10px;
+}
+
+.chat-card:hover {
+  background-color: #605f5f;
+}
+
+.chat-card h4 {
+  margin: 0;
+  font-size: 16px;
+  font-weight: bold;
+}
